<resources>
    <string name="app_name">iPhoto - iGallery style OS 10</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation.header.mail">zergitas.com</string>
    <string name="navigation.header.title">Simple Galary</string>
    <string name="action_choose_directory">Choose Directory</string>
    <string name="videos">videos</string>
    <string name="date">Date</string>
    <string name="time_image">Time of picture :</string>
    <string name="name_image">Name of picture :</string>
    <string name="size_image">Size of picture :</string>
    <string name="path_image">Path of picture  :</string>
    <string name="infor_image">Information of picture</string>
    <string name="large_image">Kb :</string>
    <string name="dialog_delete_image">Do you really want to delete this picture ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail_image">Detail screen</string>
    <string name="dialog_delete">Do you really want to delete this picture ?</string>
    <string name="dialog_init_back_ground">Do you really want to setup this picture to background of your device ?</string>
    <string name="images">IMAGES</string>
    <string name="album">ALBUM</string>
</resources>
