<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20dp"
        android:fontFamily="Arial"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:textStyle="normal"
        android:text="@string/dialog_delete"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/yes"
            android:id="@+id/btn_ok"
            android:textSize="@dimen/large"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no"
            android:id="@+id/btn_cancel"
            android:textSize="@dimen/large"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>