<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/time_image"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingLeft="@dimen/medium"
                android:gravity="center_vertical"
                android:text="aaaaaaa"
                android:textColor="@color/black"
                android:id="@+id/tv_time_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/name_image"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_name_image"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:paddingLeft="@dimen/medium"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/size_image"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_size_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/medium"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/large_image"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_kb_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/medium"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:text="@string/path_image"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_path_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/medium"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>